re PR target/80019 (ICE in ix86_vector_duplicate_value, at config/i386/i386.c:42584)

PR target/80019
	* config/i386/i386.c (ix86_vector_duplicate_value): Create
	subreg of inner mode for values already in registers.

testsuite/ChangeLog:

	PR target/80019
	* gcc.target/i386/pr80019.c: New test.

From-SVN: r246168